--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,25 @@
     background-color: $heroyellow;
   }
 
+  .intro-screen {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .ending-text {
+    text-align: center;
+  }
+
+  .text-is-centered {
+    background-color: black;
+    color: white;
+    padding: 35px;
+    border-radius: 2%;
+   
+
+  }
+
+
   body{
     background-color: $heroyellow;
     background-repeat: no-repeat;
@@ -30,14 +49,54 @@
       margin-bottom: 10px;
     }
 
+ 
+
     .card {
+      img{
+        max-height: 500px;
+        
+      }
+      cursor: pointer;
       text-align: center;
       margin: 10px;
       box-shadow: none;
       p {
         text-align: center;
       }
-    }
+        img {
+          width: 97%;
+        }
+        
+      }
+
+      .card:hover{
+        background-color: black;
+        color: white;
+        height: 110%;
+        width: 110%;
+      }
+
+      .buttons {
+
+        display: flex;
+        justify-content: space-evenly;
+      }
+    
+
+
+
+  .container {
+  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .columns {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+
 
     .button {
       margin-top: 35px;
@@ -72,4 +131,33 @@
       text-align: center;
     }
 
+  }
+
+  .middle-div{
+    p {
+      margin: 40px;
+    }
+    
+   
+    font-size: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .hero-body {
+    display: flex;
+    justify-content: center;
+  }
+
+  .heroes-grid {
+    display: flex;
+    flex-wrap: wrap;
+    .grid-images{
+      height: 200px;
+      width: auto;
+      margin: 5px;
+      border: 2px solid black;
+    }
   }
